2019-09-05 Wiley E. Hill <wileyhill@gmail.com>

    * scheme/unit-tests/t0101-object-box.scm: Enhance check for object-ids.

    * src/scheme/edascmhookproxy.c: Add is_a_edascm_hook_proxy documentation.

    * src/scheme/edascmvaluetypes.c: Reformat documentation blocks.

    * src/scheme/scheme_init.c: Call edascm_init_version in edascm_init_impl.

  ** src/scheme/scheme_object.c: Fix object-id SCM_ASSERT subr argument.

2019-09-04 Wiley E. Hill <wileyhill@gmail.com>

    * scheme/geda/object.scm: Add scheme interface:

          * object-selectable?
          * set-object-selectable!

    * scheme/unit-tests/t0101-object-box.scm: Add check for object-id.

    * scheme/unit-tests/t0102-object-circle.scm: Add check for object-id.

    * src/scheme/scheme_object.c: Replace SCM_DEFINE macro with EDA_SCM_DEFINE
      and export scheme_object_id during module initialization. Move function
      object_line_info before object_set_line_x. Add API routines:

          * scheme_object_selectable
          * object_set_selectable_x

2019-09-03 Wiley E. Hill <wileyhill@gmail.com>

    * scheme/geda/object.scm: Reorder object types using alphabetical order.
      Add public API object-id.

    * src/scheme/edascmhookproxy.c: Add internal Doxygen tags for documented
      static functions and reformat documentation blocks.

    * src/scheme/scheme_deprecated.c: Include derivative line types in
      validation list since these type do have valid pointer to line options.

    * src/scheme/scheme_object.c: Add Scheme API "%object-id" implementation
      procedure.

2019-08-26 Wiley E. Hill <wileyhill@gmail.com

    * scheme/geda/deprecated.scm: Remove re-exporting object character types.

    * scheme/geda/object.scm: Re-export object character types.

    * src/geda/geda_box.c: Add geda_box_get_position documentation.

    * src/geda/geda_bus.c: Add function geda_bus_object_get_position.

    * src/scheme/scheme_deprecated.c: Remove exporting definitions of object